<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="115dp"
        android:gravity="center"
        android:text="@string/practice"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="146dp"
        android:onClick="Pract1"
        android:text="@string/leapyear"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="192dp"
        android:onClick="Pract2"
        android:text="@string/array"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="59dp"
        android:onClick="Pract3"
        android:text="@string/table"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="166dp"
        android:onClick="Pract4"
        android:text="@string/average"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        />
</RelativeLayout>