<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".promedio">

    <EditText
        android:id="@+id/txtIngles"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_above="@+id/txtDAM"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/english"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDAM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtDAM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtadmin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/DAM1"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtadmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtBD"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/admin"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtBD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtuml"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/BD"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:layout_above="@+id/Listview"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="17dp"
        android:text="@string/Calculated"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBD"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        />

    <EditText
        android:id="@+id/txtuml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/UML"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/Listview"
        android:layout_width="234dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="35dp" />

</RelativeLayout>