<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".Aniobisiesto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/leapyear"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edtxtAnio"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnVerificar"
        android:layout_below="@+id/textView"
        android:layout_marginStart="12dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="4"
        android:background="#ffffff"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtxtAnio"
        android:layout_alignBottom="@+id/edtxtAnio"
        android:layout_alignParentStart="true"
        android:layout_marginStart="103dp"
        android:gravity="center|right"
        android:text="@string/year"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="17dp" />

    <Button
        android:id="@+id/btnVerificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="451dp"
        android:layout_toEndOf="@+id/textView2"
        android:background="@drawable/custom_button"
        android:text="@string/Calculated"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>